[package]
name = "sandbox-rs"
version = "0.1.0"
authors = ["ken"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.94", features = ["derive"]}
serde_json = "1.0.40"
bytes = "0.4"
prost = "0.5"
prost-types = "0.5"
tower-grpc = {version = "0.1.0", features = ["tower-hyper"] }
tower-hyper = "0.1"

[build-dependencies]
tower-grpc-build = {version = "0.1.0", features = ["tower-hyper"] }
prost-build = "0.5.0"